0.83.7
  - The mouse copy/paste feature is now available for
    non-Windows systems on SDL2 builds. Also, pasting
    from the clipboard with a mapped shortcut is also
    available for Linux/X11 on SDL1 builds. (Wengier)
  - Implemented the x86 dynamic core for both 32-bit
    and 64-bit systems by re-porting the code from SVN.
    Dynamic core now supports either the dynamic_x86
    or the dynamic_rec core. The dynamic_x86 core will
    be used by default for x86 and x86_64 platforms and
    if "core=dynamic" is set, and Windows 9x can be run
    in this dynamic core. You can also explicit specify
    "core=dynamic_x86" or "core=dynamic_rec" for either
    the dynamic_x86 core or the dynamic_rec core. Also
    thank joncampbell123 for the 64-bit fix. (Wengier)
  - You can now use your own save file (in addition to
    save slots! There are now a "Use save file" toggle
    item and "Browse save file..." for browsing save
    files on your computer. A config option "savefile"
    (in [dosbox] section) is added to specify a save
    file to use at start. (Wengier)
  - Save state feature now allows users to optionally
    enter remarks when saving a state. A submenu group
    "Save/load option" is added (under "Capture") where
    you can toggle menu items "No remark when saving
    state" (for disabling input of remarks when saving)
    and "force load state mode". A menu item "Display
    state information" is added as well to display the
    information of the saved state. (Wengier)
  - DOSBox-X will now use native dialog box to display
    quit warnings and save state errors. (Wengier)
  - Updated the Windows installer to default to the
    "typical" installation. For the full installation
    start menu items will be added for DOSBox-X builds
    copied to subdirectories. (Wengier)
  - Improved Flatpak support for Linux. (rderooy)
  - Fixed shelling from programs may not work when the
    shell config option is set. (Wengier)